[tool.poetry]
name = "hammuon"
version = "0.1.11"
description = "Basic and important data structures algorithms."
readme = "README.md"
authors = ["mcvarer <ktuce.mcanv@gmail.com>"]
license = "GNU General Public License"
repository = "https://github.com/mcvarer/algorithms"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = [
    "setuptools",
    "poetry-core>=1.0.0",
    "wheel"
]
build-backend = "poetry.core.masonry.api"
